@@ -1,3 +1,8 @@
+2006-09-07  Paul Brook  <paul@codesourcery.com>
+
+	* gas/arm/neon-omit.s: Test three-argument variants.
+	* gas/arm/neon-omit.d: Update expected output.
+
 2006-09-04  Paul Brook  <paul@codesourcery.com>
 
 	* gas/arm/neon-cov.s: Test .u and .s aliases for .i suffixes.
